# check-gha-pinning

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  Readme.md  pyproject.toml
.github/workflows/: ci.yml
check_gha_pinning/: __init__.py  __main__.py  test_check_gha_pinning.py  test_integration.py
tests/: test_check_gha_pinning.py
